Fix distortion of NB desktop table header that occurs when sorted in descending order

--- a/content/ui/classic/base.css
+++ b/content/ui/classic/base.css
@@ -258,18 +258,6 @@ div.video
     overflow: auto;
 }
 
-.desc
-{
-    font-size: .7em;
-    font-style: italic;
-
-    display: block; text-align: center;
-}
-
-.desc > span
-{
-    display: block;
-}
 
 .desc a:link,
 .desc a:visited
